deployment/k8s-manifests/1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-interview-monster
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      k8s-app: it-interview-monster
  template:
    metadata:
      labels:
        k8s-app: it-interview-monster
    spec:
      containers:
        - name: it-interview-monster
          image: ghcr.io/martynov-alex/it-interview-monster-backend:v0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests: # Гарантированные ресурсы
              cpu: "0.2" # 20% от 1 ядра
              memory: 64Mi # 64 Mb
            limits: # Максимальные ресурсы
              cpu: "0.4" # 40% от 1 ядра
              memory: 128Mi
