deployment/k8s-manifests/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-interview-monster
  namespace: default
spec:
  selector:
    k8s-app: it-interview-monster
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
