deployment/k8s-manifests/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-interview-monster
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-interview-monster
                port:
                  number: 80
